# salary-prediction-linear-regression

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  streamlit_app.py
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
data/: salary_data.csv
src/salary_prediction/: __init__.py  model.py
tests/: test_model.py
