[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "salary-prediction-linear-regression"
version = "0.1.0"
description = "Browser-based salary prediction app using linear regression."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Nikita Krivoshei" }]
dependencies = [
  "matplotlib>=3.9",
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "streamlit>=1.35",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.4.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
