[project]
name = "salary-prediction-linear-regression"
version = "0.1.0"
description = "Streamlit app for salary prediction with linear regression."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Nikita Krivoshei" }]
license = "MIT"
dependencies = [
  "matplotlib>=3.10,<4",
  "numpy>=2.2,<3",
  "pandas>=2.3,<4",
  "scikit-learn>=1.7,<2",
]

[project.optional-dependencies]
app = [
  "streamlit>=1.50,<2",
]
dev = [
  "pytest>=8.4,<10",
  "ruff>=0.13,<1",
]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
